--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -24,8 +24,9 @@ jobs:
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       env:
         BODY: ${{ github.event.pull_request.body }}
+        COMMIT: ${{ github.event.pull_request.head.sha }}
       run: |
-        GITHUB_PARAMS="{ "actor": $GITHUB_ACTOR, "repo": $GITHUB_REPOSITORY, "ref": $GITHUB_BASE_REF, "commit": $GITHUB_HEAD_REF}"
+        GITHUB_PARAMS="{ 'actor': $GITHUB_ACTOR, 'repo': $GITHUB_REPOSITORY, 'ref': $GITHUB_REF, "commit": $COMMIT }"
         python3 save_formated_pr_body.py "$BODY" "$GITHUB_PARAMS"> result.txt
         PR_FORMATTED_BODY=$(cat result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
