--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -25,9 +25,9 @@ jobs:
       env:
         BODY: ${{ github.event.pull_request.body }}
         PR_SHA: ${{ github.event.pull_request.head.sha }}
-        PR_NUMBER: ${{ github.event.pull_request.pull_number }}
+        PR_NUMBER: ${{ github.event.pull_request.number }}
       run: |
-        PR_URL="<https://$GITHUB_SERVER_URL/$GITHUB_REPOSITORY_OWNER/pull/$PR_NUMBER|PR Url>"
+        PR_URL="<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/pull/$PR_NUMBER|PR Url>"
         GITHUB_PARAMS="{ 'actor': $GITHUB_ACTOR, 'repo': $GITHUB_REPOSITORY, 'ref': $GITHUB_REF, 'pr_url': $PR_URL }"
         python3 save_formated_pr_body.py "$BODY" "$GITHUB_PARAMS"> result.txt
         PR_FORMATTED_BODY=$(cat result.txt)
